objects/Machine_Fixture__c.object
<CustomObject><fields>
        <fullName>Fixtures_Jig_Type__c</fullName>
        <label>Fixtures/Jig Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chuck Jaws Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chuck Jaws Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drill Jig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fab/MC Jaws</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grippers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/C Fixture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robot Jaws</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turning Fixture</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Fixtures_Jigs_Hours__c</fullName>
        <label>Fixtures/Jigs Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Fixtures_Jigs_Material_Cost__c</fullName>
        <label>Fixtures/Jigs Material Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Fixtures_Jigs_Material_Desc__c</fullName>
        <label>Fixtures/Jigs Material Desc</label>
        <picklist>
            <picklistValues>
                <fullName>Other Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chuck Jaws Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chuck Jaws Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drill Jig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fab/MC Jaws</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grippers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/C Fixture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robot Jaws</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turning Fixture</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Hourly_Rate__c</fullName>
        <defaultValue>145</defaultValue>
        <label>Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Initial_Programming_Hours__c</fullName>
        <label>Initial Programming Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Product_Configuration__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Machine Fixtures</relationshipLabel>
        <relationshipName>Machine_Fixtures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Tools_Cutters_Cost__c</fullName>
        <label>Tools &amp; Cutters Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Fixtures_Jigs_Hours__c + Initial_Programming_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Labor_Cost__c</fullName>
        <formula>Total_Hours__c * Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Machine_Fixture_Cost__c</fullName>
        <label>Total Machine Fixture Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Materials_Cost__c</fullName>
        <formula>Tools_Cutters_Cost__c +  Fixtures_Jigs_Material_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Materials Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Machine Fixture</label><nameField>
        <displayFormat>MachFix-{000000}</displayFormat>
        <label>Machine Fixture Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Machine Fixtures</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>